--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <!-- Navbar Ends Here -->
 
         <!-- Hero Section Starts Here -->
-        <section class="container d-flex flex-wrap " style="background-color:;">
+        <section class="container d-flex flex-wrap " style="background-color:#FFFBF0;">
             <div class="col-md-6 col pt-5">
                 <h1 style="font-size: 5rem;" class="custom-text custom-text-yellow">BE THE PENGUINS</h1>
                 <h1 style="font-size: 5rem;" class="custom-text">OF WINTER</h1>
@@ -137,18 +137,18 @@
 
     <!-- MAN JACKET SECTION STARTS HERE -->
     <section class="container  mb-5 pb-5">
-        <h1 style="font-size: 4rem;" class="custom-text">WOMEN JACKET</h1>
+        <h1 style="font-size: 4rem;" class="custom-text">MEN JACKET</h1>
         <div class="row row-cols-1 row-cols-md-3 g-4 mt-2">
            
             <div class="col">
               <div class="card h-100 p-3 custom-card">
-                <img style="background-color: #F1F1F1; border-radius: 2rem;" src="image/women jacket/1.png" class="card-img-top" alt="...">
+                <img style="background-color: #F1F1F1; border-radius: 2rem; padding: 10%;" src="image/men jacket/1.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 style="font-size: 2.5rem;" class="custom-text card-title">Yellow Coat Jacket</h5>
-                  <p class="card-text" style="color:dimgray;">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h5 style="font-size: 2.5rem;" class="custom-text card-title">Snowbird Jacket Mens</h5>
+                  <p class="card-text" style="color:dimgray;">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
                 </div>
                 <div class="card-footer d-flex justify-content-between card-footer-custom">
-                  <h1 class="custom-text-yellow" style="font-size:3rem;">$230</h1>
+                  <h1 class="custom-text-yellow" style="font-size:3rem;">$500</h1>
                   <button  class="btn btn-lg border-0 text-white" style="border-radius: 10px;">
                     <img src="image/logo-icon/shopping-cart 1.png" alt="shopping cart icon" style="height: 2.5rem;">
                     Buy Now</button>
@@ -159,13 +159,13 @@
 
             <div class="col">
               <div class="card h-100 p-3 custom-card">
-                <img style="background-color:#F1F1F1; height: 56%; padding:3% 15%; border-radius: 2rem;" src="image/women jacket/2.png" class="card-img-top" alt="...">
+                <img style="background-color:#F1F1F1;  padding:13%; border-radius: 2rem; height: 66%;" src="image/men jacket/2.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 style="font-size: 2.5rem;" class="card-title custom-text">Ladies Jacket</h5>
+                  <h5 style="font-size: 2.5rem;" class="card-title custom-text">Mens Leather Jacket</h5>
                   <p style="color: dimgray;" class="card-text">This card has supporting text below as a natural lead-in to additional content. Lorem ipsum dolor sit amet.</p>
                 </div>
                 <div class="card-footer d-flex justify-content-between card-footer-custom">
-                    <h1 class="custom-text-yellow" style="font-size:3rem;">$330</h1>
+                    <h1 class="custom-text-yellow" style="font-size:3rem;">$499</h1>
                     <button  class="btn btn-lg border-0 text-white" style="border-radius: 10px;">
                       <img src="image/logo-icon/shopping-cart 1.png" alt="shopping cart icon" style="height: 2.5rem;">
                       Buy Now</button>
@@ -176,25 +176,27 @@
 
             <div class="col">
               <div class="card h-100 p-3 custom-card">
-                <img src="image/women jacket/3.png" class="card-img-top" alt="..." style="background-color:#F1F1F1; padding: 5%; height: 56%; border-radius: 2rem;">
+                <img src="image/men jacket/3.png" class="card-img-top" alt="..." style="background-color:#F1F1F1; padding: 13%; height: 66%; border-radius: 2rem;">
                 <div class="card-body">
-                  <h5 class="card-title custom-text" style="font-size: 2.5rem;">Super Duper Leather</h5>
+                  <h5 class="card-title custom-text" style="font-size: 2.5rem;">Mens Casual Jacket</h5>
                   <p style="color: dimgray;" class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
                 </div>
                 <div class="card-footer d-flex justify-content-between card-footer-custom">
-                    <h1 class="custom-text-yellow" style="font-size:3rem;">$330</h1>
+                    <h1 class="custom-text-yellow" style="font-size:3rem;">$999</h1>
                     <button  class="btn btn-lg border-0 text-white" style="border-radius: 10px;">
                       <img src="image/logo-icon/shopping-cart 1.png" alt="shopping cart icon" style="height: 2.5rem;">
                       Buy Now</button>
                   </div>
               </div>
             </div>
-
-
           </div>
 
     </section>
+    <!-- MENS SECTION END HERE -->
 
+
+
+    
     </main>
 
 
