--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-
+    <link rel="icon" href="image/logo-icon/4.png" type="image/icon type">
     <!-- Font Link Starts -->
 
     <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
@@ -25,7 +25,7 @@
     <header style="background-color: #FFFBF0;">
 
         <!-- Navbar Starts Here -->
-        <section class="container mb-5">
+        <section class="container mb-5" id="home">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container-fluid">
                     <div>
@@ -43,16 +43,19 @@
                         style="font-family: 'Acme', sans-serif; font-size: 120%;">
                         <ul class="navbar-nav">
                             <li class="nav-item p-3">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                <a class="nav-link active" aria-current="page" href="#home">Home</a>
                             </li>
                             <li class="nav-item p-3">
-                                <a class="nav-link" href="#">Features</a>
+                                <a class="nav-link" href="#woman">Woman</a>
                             </li>
                             <li class="nav-item p-3">
-                                <a class="nav-link" href="#">Pricing</a>
+                                <a class="nav-link" href="#man">Man</a>
                             </li>
                             <li class="nav-item p-3">
-                                <a class="nav-link " href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                                <a class="nav-link " href="#contract" tabindex="-1" aria-disabled="true">Contract</a>
+                            </li>
+                            <li class="nav-item p-3">
+                                <a class="nav-link" href="#join">Join</a>
                             </li>
                         </ul>
                     </div>
@@ -84,7 +87,7 @@
     <main class="container pt-5 mt-5">
 
         <!-- Women Jacket Section Starts Here -->
-        <section class="container  mb-5 pb-5">
+        <section class="container  mb-5 pb-5" id="woman">
             <h1 style="font-size: 4rem;" class="custom-text">WOMEN JACKET</h1>
             <div class="row row-cols-1 row-cols-md-3 g-4 mt-2">
 
@@ -155,7 +158,7 @@
 
 
         <!-- MAN JACKET SECTION STARTS HERE -->
-        <section class="container  mb-5 pb-5">
+        <section class="container  mb-5 pb-5" id="man">
             <h1 style="font-size: 4rem;" class="custom-text">MEN JACKET</h1>
             <div class="row row-cols-1 row-cols-md-3 g-4 mt-2">
 
@@ -224,7 +227,7 @@
 
 
         <!-- BOTTOM SECTION STARTS HERE -->
-        <section class="container pt-5 mt-5 pb-5 mb-5 d-flex flex-wrap-reverse ">
+        <section class="container pt-5 mt-5 pb-5 mb-5 d-flex flex-wrap-reverse " id="contract">
 
             <div class=" col-md-6 pt-5 mt-5 ">
                 <section class=" container custom-card d-flex justify-content-center align-items-center mb-5">
@@ -267,7 +270,7 @@
         <!-- BOTTOM ENDS HERE  -->
 
         <!-- FORM SECTION STARTS HERE -->
-        <section class="container bg-warning p-5 mb-5" style="border-radius: .5rem;">
+        <section class="container bg-warning p-5 mb-5" style="border-radius: .5rem;" id="join">
 
             <h1 class="text-center">Create An Account To Get Coupon And Home Delivery <br><br></h1>
 
