--- a/index.html
+++ b/index.html
@@ -358,9 +358,9 @@
 
     <footer>
         <div style="text-align: center;">
-            <a href="#" class="fa fa-facebook"></a>
-            <a href="#" class="fa fa-twitter"></a>
-            <a href="#" class="fa fa-linkedin"></a>
+            <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
+            <a href="https://www.twitter.com/" class="fa fa-twitter"></a>
+            <a href="https://www.linkedin.com/" class="fa fa-linkedin"></a>
             
         </div>
         <p style="text-align: center;">copyright &copy;reserved to <a
